--- a/FitnessApp.csproj
+++ b/FitnessApp.csproj
@@ -95,6 +95,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Factories\trainerFactory.cs" />
     <Compile Include="Factories\userFactory.cs" />
     <Compile Include="Layouts\Header.Master.cs">
       <DependentUpon>Header.Master</DependentUpon>
@@ -118,11 +119,15 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>FitnessAppModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\Trainer.cs">
+      <DependentUpon>FitnessAppModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\User.cs">
       <DependentUpon>FitnessAppModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\DatabaseSingleton.cs" />
+    <Compile Include="Repositories\trainerRepository.cs" />
     <Compile Include="Repositories\userRepository.cs" />
     <Compile Include="Views\HomePage.aspx.cs">
       <DependentUpon>HomePage.aspx</DependentUpon>
