--- a/Web.config
+++ b/Web.config
@@ -13,8 +13,8 @@
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
   <connectionStrings>
-    <add name="FitnessAppDatabaseEntities" connectionString="metadata=res://*/Models.FitnessAppModel.csdl|res://*/Models.FitnessAppModel.ssdl|res://*/Models.FitnessAppModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\FitnessAppDatabase.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+   
+  <add name="FitnessAppDatabaseEntities" connectionString="metadata=res://*/Models.FitnessAppModel.csdl|res://*/Models.FitnessAppModel.ssdl|res://*/Models.FitnessAppModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\FitnessAppDatabase.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
