base exercise page

--- a/Web.config
+++ b/Web.config
@@ -11,6 +11,11 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+    <pages>
+		<controls>
+			<add tagPrefix="asp" namespace="System.Web.UI.WebControls" assembly="System.Web" />
+		</controls>
+    </pages>
   </system.web>
   <connectionStrings>
     <add name="FitnessAppDatabaseEntities" connectionString="metadata=res://*/Models.FitnessAppModel.csdl|res://*/Models.FitnessAppModel.ssdl|res://*/Models.FitnessAppModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\FitnessAppDatabase.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
