--- a/FitnessApp.csproj
+++ b/FitnessApp.csproj
@@ -203,7 +203,7 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Assets\Images\User\Uploaded Profile Pictures\" />
+    <Folder Include="Assets\Images\User\UploadPics\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
