--- a/FitnessApp.csproj
+++ b/FitnessApp.csproj
@@ -90,6 +90,7 @@
       <LastGenOutput>FitnessAppModel.cs</LastGenOutput>
     </Content>
     <Content Include="Style\EditProfile.css" />
+    <Content Include="Style\HireTrainer.css" />
     <Content Include="Style\Profile.css" />
     <Content Include="Views\EditProfilePage.aspx" />
     <Content Include="Views\ExerciseVideoPage.aspx" />
