--- a/FitnessApp.csproj
+++ b/FitnessApp.csproj
@@ -92,6 +92,7 @@
     <Content Include="Style\EditProfile.css" />
     <Content Include="Style\HireTrainer.css" />
     <Content Include="Style\Profile.css" />
+    <Content Include="Style\ViewTrainer.css" />
     <Content Include="Views\EditProfilePage.aspx" />
     <Content Include="Views\ExerciseVideoPage.aspx" />
     <Content Include="Views\HireTrainerPage.aspx" />
